--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -1,38 +1,38 @@
 # Deployment Configuration for Stage 1
-# All values are stored in AWS SSM Parameter Store for maximum flexibility
-# This file maps configuration keys to SSM parameter paths
+# Critical values are stored in AWS SSM Parameter Store
+# Static configuration values are defined here as defaults
 
 aws:
-  region: /slm-ft-serving/aws/region
+  region: /slm-ft-serving/aws/region  # SSM Parameter
   
 ec2:
-  instance_id: /slm-ft-serving/ec2/instance-id
-  instance_type: /slm-ft-serving/ec2/instance-type
+  instance_id: /slm-ft-serving/ec2/instance-id  # SSM Parameter
+  instance_type: g6.2xlarge
   
 ecr:
-  repository_name: /slm-ft-serving/ecr/repository-name
+  repository_name: slm-ft-serving-vllm
   # ECR registry will be dynamically constructed from account_id and region
 
 secrets:
   # HuggingFace token stored in Secrets Manager, referenced via SSM parameter
-  hf_token: /slm-ft-serving/secrets/hf-token
+  hf_token: /slm-ft-serving/secrets/hf-token  # SSM Parameter
 
 model:
-  base_model: /slm-ft-serving/model/base-model
-  adapter_model: /slm-ft-serving/model/adapter-model
+  base_model: meta-llama/Llama-3.1-8B
+  adapter_model: loghoag/llama-3.1-8b-medical-ie
 
 vllm:
-  api_port: /slm-ft-serving/vllm/api-port
-  tensor_parallel_size: /slm-ft-serving/vllm/tensor-parallel-size
+  api_port: 8000
+  tensor_parallel_size: 1  # g6.2xlarge has 1 GPU
   
 cloudwatch:
-  log_group_ssm: /slm-ft-serving/cloudwatch/log-group-ssm
-  log_group_deployment: /slm-ft-serving/cloudwatch/log-group-deployment
+  log_group_ssm: /aws/ssm/slm-ft-serving/commands
+  log_group_deployment: /aws/deployment/slm-ft-serving
   
 deployment:
-  max_retries: /slm-ft-serving/deployment/max-retries
-  retry_delay_seconds: /slm-ft-serving/deployment/retry-delay-seconds
-  ec2_start_timeout_seconds: /slm-ft-serving/deployment/ec2-start-timeout
-  ssm_command_timeout_seconds: /slm-ft-serving/deployment/ssm-command-timeout
-  health_check_timeout_seconds: /slm-ft-serving/deployment/health-check-timeout
-  health_check_interval_seconds: /slm-ft-serving/deployment/health-check-interval
+  max_retries: 3
+  retry_delay_seconds: 10
+  ec2_start_timeout_seconds: 300
+  ssm_command_timeout_seconds: 600
+  health_check_timeout_seconds: 120
+  health_check_interval_seconds: 10
