--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,28 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-boto3 = "^1.35.0"
+# Shared dependencies used by both deployment scripts and gateway
 loguru = "^0.7.2"
 pyyaml = "^6.0.2"
+
+[tool.poetry.group.deploy]
+optional = true
+
+[tool.poetry.group.deploy.dependencies]
+# Local deployment scripts only (scripts/deploy.py)
+boto3 = "^1.35.0"
+
+[tool.poetry.group.gateway]
+optional = false
+
+[tool.poetry.group.gateway.dependencies]
+# FastAPI gateway runtime dependencies (runs in Docker on EC2)
+fastapi = "^0.115.0"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
+pydantic = "^2.9.0"
+httpx = "^0.27.0"
+python-multipart = "^0.0.12"
+pydantic-settings = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
