--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 120s  # vLLM needs time to load model
+      start_period: 360s  # vLLM needs 4-5 mins to load 32GB model + LoRA adapter
     restart: unless-stopped
     networks:
       - slm-network
