--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,31 @@
-name: Build and Push to ECR
+name: Build and Push to ECR (Stage 2)
 
 on:
   push:
     branches:
       - main
     paths:
+      # vLLM image changes
       - 'Dockerfile'
+      - 'chat_template.jinja'
       - '.dockerignore'
+      # Gateway image changes
+      - 'gateway/**'
+      - 'pyproject.toml'
+      - 'poetry.lock'
+      # Workflow changes
       - '.github/workflows/deploy.yml'
+      # Note: docker-compose.yml NOT included - deployed via SSM heredoc, not baked in images
   workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: slm-ft-serving-vllm
+  ECR_VLLM_REPOSITORY: slm-ft-serving-vllm
+  ECR_GATEWAY_REPOSITORY: slm-ft-serving-gateway
 
 jobs:
-  build-and-push:
-    name: Build Docker image and push to ECR
+  build-and-push-vllm:
+    name: Build vLLM image and push to ECR
     runs-on: ubuntu-latest
     
     steps:
@@ -54,45 +63,139 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, tag, and push vLLM image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          echo "Building Docker image for slm-ft-serving-vllm..."
+          echo "=== Building vLLM Docker Image ==="
           echo "Registry: $ECR_REGISTRY"
-          echo "Repository: $ECR_REPOSITORY"
+          echo "Repository: $ECR_VLLM_REPOSITORY"
           echo "Image Tag: $IMAGE_TAG"
           
           echo "Disk space before build:"
           df -h
           
-          # Build Docker image with ECR-based cache (no 10GB limit)
+          # Build vLLM image with ECR-based cache (no 10GB limit)
           # Cache stored in ECR as: slm-ft-serving-vllm:buildcache
           DOCKER_BUILDKIT=1 docker buildx build \
-            -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
-            -t $ECR_REGISTRY/$ECR_REPOSITORY:latest \
+            -t $ECR_REGISTRY/$ECR_VLLM_REPOSITORY:$IMAGE_TAG \
+            -t $ECR_REGISTRY/$ECR_VLLM_REPOSITORY:latest \
             -f Dockerfile \
-            --cache-from type=registry,ref=$ECR_REGISTRY/$ECR_REPOSITORY:buildcache \
-            --cache-to type=registry,ref=$ECR_REGISTRY/$ECR_REPOSITORY:buildcache,mode=max \
+            --cache-from type=registry,ref=$ECR_REGISTRY/$ECR_VLLM_REPOSITORY:buildcache \
+            --cache-to type=registry,ref=$ECR_REGISTRY/$ECR_VLLM_REPOSITORY:buildcache,mode=max \
             --push \
             --progress=plain \
             .
           
-          echo "Disk space after build:"
+          echo "Disk space after vLLM build:"
           df -h
           
-          echo "✅ Successfully pushed images to ECR"
-          echo "Cache stored in ECR as: $ECR_REGISTRY/$ECR_REPOSITORY:buildcache"
+          echo "✅ Successfully pushed vLLM images to ECR"
 
-      - name: Image digest
+      - name: vLLM image digest
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          echo "🎉 Build and push completed successfully!"
-          echo "Image URI: $ECR_REGISTRY/$ECR_REPOSITORY:latest"
-          echo "Image SHA: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "✅ vLLM build completed"
+          echo "Image URI: $ECR_REGISTRY/$ECR_VLLM_REPOSITORY:latest"
+          echo "Image SHA: $ECR_REGISTRY/$ECR_VLLM_REPOSITORY:$IMAGE_TAG"
+
+  build-and-push-gateway:
+    name: Build Gateway image and push to ECR
+    runs-on: ubuntu-latest
+    needs: build-and-push-vllm  # Sequential build to manage disk space
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Free up disk space
+        run: |
+          echo "Available disk space before cleanup:"
+          df -h
+          
+          echo "Cleaning up unnecessary files..."
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          
+          echo "Available disk space after cleanup:"
+          df -h
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build, tag, and push Gateway image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          echo "=== Building Gateway Docker Image ==="
+          echo "Registry: $ECR_REGISTRY"
+          echo "Repository: $ECR_GATEWAY_REPOSITORY"
+          echo "Image Tag: $IMAGE_TAG"
+          
+          echo "Disk space before build:"
+          df -h
+          
+          # Build Gateway image with ECR-based cache
+          # Cache stored in ECR as: slm-ft-serving-gateway:buildcache
+          DOCKER_BUILDKIT=1 docker buildx build \
+            -t $ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:$IMAGE_TAG \
+            -t $ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:latest \
+            -f gateway/Dockerfile \
+            --cache-from type=registry,ref=$ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:buildcache \
+            --cache-to type=registry,ref=$ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:buildcache,mode=max \
+            --push \
+            --progress=plain \
+            .
+          
+          echo "Disk space after Gateway build:"
+          df -h
+          
+          echo "✅ Successfully pushed Gateway images to ECR"
+
+      - name: Gateway image digest
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          echo "✅ Gateway build completed"
+          echo "Image URI: $ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:latest"
+          echo "Image SHA: $ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:$IMAGE_TAG"
+
+      - name: Deployment summary
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
           echo ""
-          echo "To pull this image on EC2:"
-          echo "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest"
+          echo "🎉 Stage 2 Build Complete - Both Images Pushed!"
+          echo ""
+          echo "vLLM Image:"
+          echo "  - $ECR_REGISTRY/$ECR_VLLM_REPOSITORY:latest"
+          echo "  - $ECR_REGISTRY/$ECR_VLLM_REPOSITORY:$IMAGE_TAG"
+          echo ""
+          echo "Gateway Image:"
+          echo "  - $ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:latest"
+          echo "  - $ECR_REGISTRY/$ECR_GATEWAY_REPOSITORY:$IMAGE_TAG"
+          echo ""
+          echo "To deploy on EC2:"
+          echo "  poetry run python scripts/deploy.py --skip-start"
