config: restrict CORS to Vercel domains for Stage 3
Update CORS origins from wildcard to specific Vercel domains:
- Production: https://medical-extraction.vercel.app
- Preview: https://*.vercel.app

Files updated:
- config/deployment.yml: Set cors_origins with comma-separated Vercel domains
- docker-compose.yml: Update comment to reflect Stage 3 CORS config

Note: Gateway code already supports comma-separated CORS origins

--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -30,7 +30,8 @@ vllm:
 
 gateway:
   api_port: 8080
-  cors_origins: "*"  # Stage 2: Allow all for testing, restrict in Stage 3
+  # CORS origins: Comma-separated list for production + preview deployments
+  cors_origins: "https://medical-extraction.vercel.app,https://*.vercel.app"
   
 docker:
   # Container names managed by docker-compose (vllm-server, fastapi-gateway)
