ci: add GitHub environment to workflow for deployment tracking
Add 'production' environment to both build jobs:
- vLLM job links to EC2 vLLM endpoint (port 8000)
- Gateway job links to live Vercel frontend

This enables:
- Deployments visible in GitHub sidebar
- Deployment history tracking
- Environment-specific protection rules
- Direct links to deployed services

Setup required: Create 'production' environment in repo Settings > Environments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
   build-and-push-vllm:
     name: Build vLLM image and push to ECR
     runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: http://52.90.91.216:8000
     
     steps:
       - name: Checkout code
@@ -103,6 +106,9 @@ jobs:
   build-and-push-gateway:
     name: Build Gateway image and push to ECR
     runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://medical-extraction.vercel.app
     # Parallel build: runs simultaneously with vLLM (with cache, both complete in ~1 min)
     
     steps:
