--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,9 +104,7 @@ jobs:
   build-and-push-gateway:
     name: Build Gateway image and push to ECR
     runs-on: ubuntu-latest
-    environment:
-      name: production
-      url: https://medical-extraction.vercel.app  # Stable URL, doesn't change
+    environment: production
     # Parallel build: runs simultaneously with vLLM (with cache, both complete in ~1 min)
     
     steps:
