--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -48,6 +48,6 @@ deployment:
   max_retries: 3
   retry_delay_seconds: 10
   ec2_start_timeout_seconds: 300
-  ssm_command_timeout_seconds: 600
+  ssm_command_timeout_seconds: 900  # 15 minutes - allows time for image pulls
   health_check_timeout_seconds: 300  # 5 minutes for vLLM model loading
   health_check_interval_seconds: 10
